tests/script/negative/adt/record.out
Error at Line 11, Column 8:
   Reference to invalid field 'f2'. The following fields are defined for every constructor:
      int f1